--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 22
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -36,20 +36,18 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
 
     implementation 'com.amazonaws:aws-android-sdk-core:[2.16,)'
     implementation 'com.amazonaws:aws-android-sdk-appsync:[3.0,)'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.16.0'
-    testImplementation 'org.json:json:20190722'
+    implementation 'com.babylon.certificatetransparency:certificatetransparency-android:0.2.0'
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'com.sudoplatform:sudouser:7.0.1'
+    androidTestImplementation("androidx.test.ext:junit:1.1.1")
+    androidTestImplementation "io.kotlintest:kotlintest-assertions:3.3.2"
     api 'com.sudoplatform:sudoconfigmanager:1.2.2'
-    api 'com.sudoplatform:sudouser:7.0.1'
+    api 'com.sudoplatform:sudouser:7.4.0'
 }
 
 task sourcesJar(type: Jar) {
@@ -71,7 +69,7 @@ apply plugin: 'maven'
 ext {
     PUBLISH_GROUP_ID = 'com.sudoplatform'
     PUBLISH_ARTIFACT_ID = 'sudoapiclient'
-    PUBLISH_DESCRIPTION = 'An android library used by SudoPlatform SDKs for sharing a single AWS AppSync Client'
+    PUBLISH_DESCRIPTION = 'An Android library used by SudoPlatform SDKs for sharing a single AWS AppSync Client'
     PUBLISH_PROJECT_URL = 'https://github.com/sudoplatform/sudo-api-client-android'
     PUBLISH_PROJECT_SCM = 'scm:git:github.com/sudoplatform/sudo-api-client-android.git'
     if (project.hasProperty('tag')) {
