--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
+    ext.kotlin_version = '1.3.72'
     ext.dokka_version = '0.9.18'
-    repositories {
-        google()
-        jcenter()
-
-    }
+    ext.appsync_version = "3.1.0"
+    ext.aws_version = "2.16.12"
 
     repositories {
         google()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:2.8.+'
+        classpath "com.amazonaws:aws-android-sdk-appsync-gradle-plugin:$appsync_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:${dokka_version}"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.8"
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.21.2"
