--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
 
-    implementation 'com.amazonaws:aws-android-sdk-core:[2.16,)'
-    implementation 'com.amazonaws:aws-android-sdk-appsync:[3.0,)'
+    implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
+    implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version"
 
     implementation 'com.babylon.certificatetransparency:certificatetransparency-android:0.2.0'
 
@@ -47,11 +47,11 @@ dependencies {
     androidTestImplementation("androidx.test.ext:junit:1.1.1")
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.3.2"
     api 'com.sudoplatform:sudoconfigmanager:1.2.2'
-    api 'com.sudoplatform:sudouser:7.4.0'
+    api 'com.sudoplatform:sudouser:7.8.0'
 }
 
 task sourcesJar(type: Jar) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from android.sourceSets.main.java.srcDirs
 }
 
