--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -23,7 +23,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     testOptions {
         unitTests.returnDefaultValues = true
     }
@@ -35,19 +41,17 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
 
     implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version"
 
     implementation 'com.babylon.certificatetransparency:certificatetransparency-android:0.2.0'
 
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation("androidx.test.ext:junit:1.1.1")
-    androidTestImplementation "io.kotlintest:kotlintest-assertions:3.3.2"
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation("androidx.test.ext:junit:1.1.2")
+    androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
     api 'com.sudoplatform:sudoconfigmanager:1.2.2'
-    api 'com.sudoplatform:sudouser:7.8.0'
+    api 'com.sudoplatform:sudouser:9.0.0'
 }
 
 task sourcesJar(type: Jar) {
