--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,12 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:4.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,8 +30,10 @@ apply plugin: 'io.codearte.nexus-staging'
 allprojects {
     repositories {
         google()
-        jcenter()
         mavenCentral()
+        // the following line is required to get the dependency
+        // org.jetbrains.trove4j:trove4j:20160824.
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
 
