--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -45,13 +45,13 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version"
 
-    implementation 'com.babylon.certificatetransparency:certificatetransparency-android:0.2.0'
+    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:0.3.0'
 
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation("androidx.test.ext:junit:1.1.2")
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
     api 'com.sudoplatform:sudoconfigmanager:1.2.2'
-    api 'com.sudoplatform:sudouser:9.0.0'
+    api 'com.sudoplatform:sudouser:9.3.1'
 }
 
 task sourcesJar(type: Jar) {
