--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "2.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -42,16 +42,23 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "com.amazonaws:aws-android-sdk-core:$aws_version"
-    implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version"
+    // AWS SDKs
+    //
+    // AWS SDKs do not follow semantic versioning rules so we need to strictly specify AWS SDK versions.
+    // Follow the process at https://anonyome.atlassian.net/wiki/spaces/PLA/pages/840073287/AWS+Android+SDK+versions+to+use+for+platform+SDKs
+    // for updating AWS SDK versions.
+    implementation "com.amazonaws:aws-android-sdk-core:$aws_version!!"
+    implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
     implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:0.3.0'
 
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation("androidx.test.ext:junit:1.1.2")
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
-    api 'com.sudoplatform:sudoconfigmanager:1.2.2'
-    api 'com.sudoplatform:sudouser:9.3.1'
+
+    // Sudo Platform SDKs.
+    implementation 'com.sudoplatform:sudoconfigmanager:1.2.2'
+    implementation 'com.sudoplatform:sudouser:9.3.4'
 }
 
 task sourcesJar(type: Jar) {
@@ -71,17 +78,23 @@ dokka {
 apply plugin: 'maven'
 
 ext {
-    PUBLISH_GROUP_ID = 'com.sudoplatform'
-    PUBLISH_ARTIFACT_ID = 'sudoapiclient'
-    PUBLISH_DESCRIPTION = 'An Android library used by SudoPlatform SDKs for sharing a single AWS AppSync Client'
-    PUBLISH_PROJECT_URL = 'https://github.com/sudoplatform/sudo-api-client-android'
-    PUBLISH_PROJECT_SCM = 'scm:git:github.com/sudoplatform/sudo-api-client-android.git'
+    projectGroup = 'com.sudoplatform'
+    projectArtifact = 'sudoapiclient'
+    projectDescription = 'An Android library used by SudoPlatform SDKs for sharing a single AWS AppSync Client'
+    projectUrl = 'https://github.com/sudoplatform/sudo-api-client-android'
+    projectSCM = 'scm:git:github.com/sudoplatform/sudo-api-client-android.git'
     if (project.hasProperty('tag')) {
-        PUBLISH_VERSION = "$tag"
+        projectVersion = "$tag"
     } else {
-        PUBLISH_VERSION = "0.0.0"
+        projectVersion = project.android.defaultConfig.versionName
     }
 }
 
-apply from: "${rootProject.projectDir}/publish-mavencentral.gradle"
+if(project.findProperty("tag") &&
+        project.file("${rootProject.projectDir}/util/publish-mavencentral.gradle").exists()) {
+    apply from: "${rootProject.projectDir}/util/publish-mavencentral.gradle"
+}
+else if (project.file("${rootProject.projectDir}/util/publish-internal-android.gradle").exists()) {
+    apply from: "${rootProject.projectDir}/util/publish-internal-android.gradle"
+}
 
