--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
-        versionName "2.0.2"
+        versionName "2.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: "true"
@@ -60,15 +60,31 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-core:$aws_version!!"
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
-    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:0.3.0'
+    implementation "com.appmattus.certificatetransparency:certificatetransparency-android:0.3.0"
+    implementation "org.bouncycastle:bcprov-jdk15to18:1.68"
+    implementation "org.bouncycastle:bcpkix-jdk15to18:1.68"
 
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation("androidx.test.ext:junit:1.1.2")
+    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
 
     // Sudo Platform SDKs.
-    implementation 'com.sudoplatform:sudoconfigmanager:1.2.2'
-    implementation 'com.sudoplatform:sudouser:9.3.4'
+    implementation 'com.sudoplatform:sudoconfigmanager:1.2.3'
+    implementation 'com.sudoplatform:sudouser:9.3.5'
+}
+
+configurations.all {
+    resolutionStrategy {
+        dependencySubstitution {
+            // Bouncy Castle is a transitive dependency of the certificate
+            // transparency library. This can be upgraded transparently
+            // to bcprov-jdk15on:1.65, but post 1.65 we need to move to bcprov-jdk15to18
+            // i.e. different module name, and so we get duplicate classes. Substitute
+            // here for the bcprov/bcpkix-jdk15to18 modules
+            substitute module("org.bouncycastle:bcprov-jdk15on") with module("org.bouncycastle:bcprov-jdk15to18:1.68")
+            substitute module("org.bouncycastle:bcpkix-jdk15on") with module("org.bouncycastle:bcpkix-jdk15to18:1.68")
+        }
+    }
 }
 
 task sourcesJar(type: Jar) {
