--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -61,16 +61,16 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
     implementation "com.appmattus.certificatetransparency:certificatetransparency-android:0.3.0"
-    implementation "org.bouncycastle:bcprov-jdk15to18:1.68"
-    implementation "org.bouncycastle:bcpkix-jdk15to18:1.68"
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.69'
+    implementation 'org.bouncycastle:bcpkix-jdk15to18:1.69'
 
-    androidTestImplementation "androidx.test:runner:1.3.0"
-    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
 
     // Sudo Platform SDKs.
-    implementation 'com.sudoplatform:sudoconfigmanager:1.2.3'
-    implementation 'com.sudoplatform:sudouser:9.3.5'
+    implementation 'com.sudoplatform:sudoconfigmanager:1.3.0'
+    implementation 'com.sudoplatform:sudouser:9.4.0'
 }
 
 configurations.all {
