--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -60,17 +60,17 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-core:$aws_version!!"
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
-    implementation "com.appmattus.certificatetransparency:certificatetransparency-android:1.0.0"
-    implementation 'org.bouncycastle:bcprov-jdk15to18:1.69'
-    implementation 'org.bouncycastle:bcpkix-jdk15to18:1.69'
+    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:1.1.0'
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.70'
+    implementation 'org.bouncycastle:bcpkix-jdk15to18:1.70'
 
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
 
     // Sudo Platform SDKs.
-    implementation 'com.sudoplatform:sudoconfigmanager:1.3.0'
-    implementation 'com.sudoplatform:sudouser:9.4.2'
+    implementation 'com.sudoplatform:sudoconfigmanager:2.0.0'
+    implementation 'com.sudoplatform:sudouser:11.0.0'
 }
 
 configurations.all {
