--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.7.20'
-    ext.appsync_version = "3.3.2"
-    ext.aws_version = "2.62.0"
+    ext.kotlin_version = '1.8.20'
+    ext.appsync_version = '3.4.0'
+    ext.aws_version = '2.70.0'
 
     repositories {
         maven { url "https://plugins.gradle.org/m2/" }
@@ -12,19 +12,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:8.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        classpath "org.owasp:dependency-check-gradle:7.1.2"
+        classpath "org.owasp:dependency-check-gradle:8.2.1"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
         classpath "com.cookpad.android.licensetools:license-tools-plugin:1.7.0"
     }
 }
 
 plugins {
-    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
+    id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
 }
 
 ext {
