--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -9,10 +9,10 @@ android {
     compileSdkVersion 31
 
     defaultConfig {
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 31
         versionCode 1
-        versionName "6.1.0"
+        versionName "8.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: "true"
@@ -48,6 +48,13 @@ android {
     sourceSets {
         main { res.srcDirs = ['src/main/res', 'src/test/main/res', 'src/test/resources'] }
     }
+
+    publishing {
+        singleVariant("release") {
+            withSourcesJar()
+            withJavadocJar()
+        }
+    }
 }
 
 dependencies {
@@ -69,8 +76,8 @@ dependencies {
     androidTestImplementation "io.kotlintest:kotlintest-assertions:3.4.2"
 
     // Sudo Platform SDKs.
-    implementation 'com.sudoplatform:sudoconfigmanager:5.0.0'
-    implementation 'com.sudoplatform:sudouser:16.0.0'
+    implementation 'com.sudoplatform:sudoconfigmanager:6.0.0'
+    implementation 'com.sudoplatform:sudouser:17.0.0'
 }
 
 // Returns a list of `configurations` which should not be scanned for vulnerabilities
