--- a/sudoapiclient/build.gradle
+++ b/sudoapiclient/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion 26
         targetSdkVersion 31
         versionCode 1
-        versionName "8.0.0"
+        versionName "8.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: "true"
@@ -69,7 +69,12 @@ dependencies {
     implementation "com.amazonaws:aws-android-sdk-appsync:$appsync_version!!"
 
     implementation "com.squareup.okhttp3:okhttp:4.11.0"
-    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.4.7'
+    implementation 'com.appmattus.certificatetransparency:certificatetransparency-android:2.5.6'
+    constraints {
+        implementation("com.squareup.okio:okio:3.4.0") {
+            because "Versions earlier then 3.3.0 suffer from CVE-2023-3635 and 3.5.0+ may have compatibility issues"
+        }
+    }
 
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -77,7 +82,7 @@ dependencies {
 
     // Sudo Platform SDKs.
     implementation 'com.sudoplatform:sudoconfigmanager:6.0.0'
-    implementation 'com.sudoplatform:sudouser:17.0.0'
+    implementation 'com.sudoplatform:sudouser:17.0.1'
 }
 
 // Returns a list of `configurations` which should not be scanned for vulnerabilities
