--- a/sudoapiclient/licenses.yml
+++ b/sudoapiclient/licenses.yml
@@ -470,3 +470,9 @@
   license: The Apache License, Version 2.0
   licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
   url: https://kotlinlang.org/
+- artifact: androidx.annotation:annotation-jvm:+
+  name: Android Support Library Annotations
+  copyrightHolder: Google, Inc.
+  license: The Apache Software License, Version 2.0
+  licenseUrl: http://www.apache.org/licenses/LICENSE-2.0.txt
+  url: https://developer.android.com/jetpack/androidx/releases/annotation#1.6.0
