--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,13 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.1'
+        classpath 'com.android.tools.build:gradle:8.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-
+        classpath "org.jmailen.gradle:kotlinter-gradle:3.16.0"
         classpath "org.owasp:dependency-check-gradle:8.2.1"
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.0.0.2929"
         classpath "com.cookpad.android.licensetools:license-tools-plugin:1.7.0"
     }
 }
@@ -49,7 +49,6 @@ if (project.findProperty("tag") && sonatypeStagingProfileId) {
         repositories {
             sonatype {
                 stagingProfileId = sonatypeStagingProfileId
-
                 username = nexusUsername
                 password = nexusPassword
             }
