--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.9.24'
-    ext.appsync_version = '3.4.0'
+    ext.amplify_version = '2.19.1'
     ext.aws_version = '2.75.2'
 
     repositories {
@@ -12,14 +12,14 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.0'
+        classpath 'com.android.tools.build:gradle:8.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "org.jmailen.gradle:kotlinter-gradle:3.16.0"
         classpath "org.owasp:dependency-check-gradle:8.2.1"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.0.0.2929"
-        classpath "com.cookpad.android.licensetools:license-tools-plugin:1.7.0"
+        classpath "gradle.plugin.com.cookpad.android.plugin:plugin:1.2.8"
     }
 }
 
