--- a/sudoapiclient/src/main/AndroidManifest.xml
+++ b/sudoapiclient/src/main/AndroidManifest.xml
@@ -1,2 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sudoplatform.sudoapiclient" />
+    xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <application
+        tools:replace="android:allowBackup"
+        android:allowBackup="false">
+
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
+
+        <uses-library android:name="android.test.runner"
+            android:required="false" />
+    </application>
+
+</manifest>
